# birdnet

./: .env.template  .gitignore  Dockerfile  README.md  app.def  apptainerfile.def  docker-compose.yaml  main.py  pyproject.toml
birdnet_multiprocessing/: main.py
scripts/: cairngorms.py  dataset.py  generate_file_index.py  kilpis.py  sounding_out_chorus.py
slurm/: embed.job  embed.sh  species_probs.job  species_probs.sh
slurm/jobs/: embed.job  species_probs.job
src/: analyzer.py
src/birdnet_dask/: __init__.py  analyzer.py
src/birdnet_multiprocessing/: analyzer.py  client.py  main.py  multiprocessing.py  utils.py
src/cli/: build_file_index.py  embed.py  embeddings_and_species_probs.py  index_files.py  species_probs.py  utils.py
test/: conftest.py  test_audio.py  test_sounding_out_chorus.py
