[project]
name = "birdnet_multiprocessing"
version = "0.1.0"
description = "Wrapper around birdnetlib to handle multiprocessing"
readme = "README.md"
requires-python = ">=3.10.13"
dependencies = [
    "birdnetlib>=0.18.0",
    "click>=8.2.1",
    "librosa>=0.11.0",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "pytest>=8.3.5",
    "tensorflow==2.15.1",
    "tqdm>=4.67.1",
]

[tool.setuptools]
packages = ["birdnet_multiprocessing"]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["test"]
