[project]
name = "birdnet_dask"
version = "0.1.0"
description = "Use Dask to process audio files with BirdNET"
readme = "README.md"
requires-python = ">=3.10.13"
dependencies = [
    "birdnetlib>=0.18.0",
    "click>=8.2.1",
    "dask[distributed]>=2025.5.1",
    "librosa>=0.11.0",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "pytest>=8.3.5",
    "resampy>=0.4.3",
    "tensorflow==2.15.1",
    "tqdm>=4.67.1",
]

[tool.setuptools]
packages = ["birdnet_dask"]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["test"]
